--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+body {
+    @apply bg-zinc-900 overflow-x-hidden h-full;
+  }
+
+.grayscale {
+    filter: grayscale(100%);
+  }
